@@ -47,8 +47,6 @@
     <ClCompile Include="src\MySQLTestSuite.cpp">
       <Filter>_Suite\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\WinDriver.cpp">
-      <Filter>_Driver\Source Files</Filter>
-    </ClCompile>
+    <ClCompile Include="src\Driver.cpp" />
   </ItemGroup>
 </Project>
