@@ -66,6 +66,7 @@ Release 1.5.3 (2014-05-xx)
 - added SevenZip library (Guenter Obiltschnig)
 - fixed GH #442: Use correct prefix length field of Windows IP_ADAPTER_PREFIX structure
 - improved GH #328: NetworkInterface on Windows XP
+- fixed GH #154 Add support for MYSQL_TYPE_NEWDECIMAL to Poco::Data::MySQL
 
 Release 1.5.2 (2013-09-16)
 ==========================
